--- a/src/utills/Header.css
+++ b/src/utills/Header.css
@@ -1,90 +1,120 @@
-
-.instagram-title{
-  font-family: 'Arial', sans-serif;
-  color: #d6d6d6;
-  text-align: start;
-  font-size: 24px;
+.layout-wrapper {
+  display: flex;
+  min-width: 500px;
+  max-width:  500px;
+  margin-right: 20px;
 }
 
-.instagram-icon{
+.sidebar {
+  position: sticky;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  z-index: 1000;
+  border-right: 1px solid #2a2a2a;
+  padding: 10px 20px;
+  color: #d6d6d6;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  transition: width 0.3s ease;
+  background-color: #000; /* 원하는 배경색 */
+}
+
+.sidebar.expanded {
+  width: 200px;
+}
+
+.sidebar.collapsed {
+  width: 50px;
+}
+
+
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.instagram-title {
+  font-family: 'Arial', sans-serif;
+  color: #d6d6d6;
+  font-size: 24px;
+  margin-bottom: 30px;
+}
+
+.instagram-icon {
+  display: none;
+  width: 30px;
+  height: 30px;
+  color: white;
+  margin-bottom: 28px;
+  margin-left: 7px;
+  margin-top: 20px;
+}
+
+.sidebar.collapsed .instagram-title {
   display: none;
 }
 
-.header{
-  position: sticky;
-  left: 0;
-  height: 100vh;
-  width: 10%;
-  align-items: center;
-  padding: 10px 20px;
-  border-right: 1px solid #2a2a2a;
-  color: #d6d6d6;
- 
-  top : 0;
+.sidebar.collapsed .instagram-icon {
+  display: block;
 }
 
-.iconDiv{
-position: absolute;
-top: 12%;
-display: flex;
-flex-direction: column;
-gap: 40px;
-width: 100%;
-justify-content: space-between;
-}
-
-.iconDiv span{
+.panel {
   display: flex;
   align-items: center;
-  width: 100%;
-  gap: 10px;
-  color: #d6d6d6;
-  font-size: 1.2rem;
+  padding: 12px 10px;
   cursor: pointer;
+  gap: 15px;
+  width: 90%;
+  transition: background 0.3s ease;
 }
 
-.iconDiv span:hover{
-  color: #7e7979;
+.sidebar.collapsed .panel {
+  width: 60%;
+}
+.panel:hover {
+  background: #7e7979;
 }
 
-
-.icon{
-  color : white;
-  cursor: pointer;
-  width: 25px;
-  height: 25px;
-  min-width: 30px;
-}
-.icon:hover{
-  color: #7e7979;
+.label {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  white-space: nowrap;
 }
 
-
-
-.Header-input{
-  max-width: 40%;
-  width: 30%
+.sidebar.collapsed .label {
+  opacity: 0;
+  transform: translateX(-10px);
+  pointer-events: none;
 }
 
+.search-panel {
+  position: sticky; 
+  top: 0;          
+  align-self: flex-start;
+  width: 300px;
+  height: 100vh;     
+  padding: 20px;
+  background-color: #000;
+  border-right: 1px solid #2a2a2a;
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: transform 0.4s ease, opacity 0.3s ease;
+  overflow-y: auto;
+  display: flex;
+  justify-content: center;
+}
 
-@media screen and (max-width: 1250px) {
-  .iconDiv span .label {
-    display: none ;
-  }
+.search-panel.show {
+  transform: translateX(0%);
+  opacity: 1;
+}
 
-  .instagram-title {
-    display: none;
-  }
-
-  .instagram-icon {
-    display: block;
-    color : white;
-    width: 30px;
-    height: 30px;
-    margin-top: 20px;
-  }
-
-  .header {
-    width: 5%;
-  }
+.search-panel.hide {
+  transform: translateX(-100%);
+  opacity: 0;
 }
