--- a/src/utills/LoginPage.css
+++ b/src/utills/LoginPage.css
@@ -39,6 +39,7 @@ h1 {
   font-size: 1.2rem;
   font-weight: bold;
   transition: background-color 0.3s ease;
+  cursor: not-allowed;
 }
 
 .login-button-on {
